--- a/client/r.jade
+++ b/client/r.jade
@@ -1,39 +1,42 @@
 template(name='reddit')
     .ui.stackable.padded.grid
         .row
-            // .four.wide.column
-            .sixteen.wide.column
+            .four.wide.column
+                +cloud filter='subreddit'
+            .twelve.wide.column
                 .ui.inline.header
                     i.reddit.icon
                     |reddit
-                +cloud filter='subreddit'
                 .ui.inline.header.search_subs
                     |#{subreddit_docs.count} subs
                 .ui.inline.header #{sub_count}
                 .ui.icon.input
                     i.search.icon
                     input.search_subreddits(type='text')
-                .scrolling.ui.items
+                .scrolling
                     unless subreddit_docs.count
                         .ui.center.aligned.basic.segment
                             i.massive.yin.yang.grey.loading.icon
                     each subreddit_docs
-                        .ui.item  
+                        .ui.grid.rounded(style="background-image:url(#{data.banner_img});, background-size:cover; background-repeat: no-repeat; min-width: 100%; ")
                             // a.ui.tiny.image.goto_sub(href="/r/#{data.display_name}")
-                            .ui.tiny.image.goto_sub
+                            .four.wide.column.goto_sub.seg
                                 img.ui.rounded.zoomer.image(src=data.icon_img)
-                            .content.say
+                            .twelve.wide.column.say.seg
                                 a.ui.header.goto_sub(href="/r/#{data.display_name}")
-                                    | !{data.display_name} #{name}
+                                    img.ui.rounded.zoomer.image(src=data.header_img)
+                                    | !{data.title} 
+                                    // |!{data.display_name}
                                 a.ui.small.grey.header.goto_sub(href="/r/#{data.display_name}")
                                     | !{data.header_title}
                                 // span.description !{data.public_description_html}
-                                span.description !{data.public_description}
+                                span.descriptionl.goto_sub !{data.public_description}
+                                |created {{ufrom data.created}}
                                 span.say
                                     // i.money.icon
                                     |#{data.advertiser_category}
                                 each tags
-                                    .ui.label #{this}
+                                    .ui.basic.small.label.goto_sub #{this}
                                 if in_dev
                                     +print_this
 
