--- a/client/s.css
+++ b/client/s.css
@@ -16,9 +16,9 @@ body {
 }
 
 .seg {
-  background: rgba(250,250,250,.5);
+  background: rgba(250,250,250,.85);
   /*opacity: .5;*/
-  border-radius: 10px;
+  /*border-radius: 10px;*/
   padding:5px;
 }
 .pulsing {
