--- a/client/reddit_page.jade
+++ b/client/reddit_page.jade
@@ -9,15 +9,18 @@ template(name='reddit_page')
                 // .ui.basic.circular.button.get_post permalink #{permalink}
                 span.rounded.full
                     |!{embed}
-                if is_image
+                if data.is_image
                     img.ui.centered.rounded.image(src=data.url)
                 else if watson.metadata.image
                     img.ui.rounded.image(src=watson.metadata.image)
-                // small #{max_emotion_name}
-                if is_video
+                else if is_youtube
                     div
-                    // iframe(width="100%" height="600" src="https://v.redd.it/9vk3khyb08e51/DASH_360.mp4?source=fallback" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
-                    iframe(width="100%" height="600" src=url frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+                    // .ui.fluid.embed
+                    //     iframe(id="ytplayer" type="text/html" width="100%" height="500" src="https://www.youtube.com/embed/#{youtube_parse}" frameborder="0" allowfullscreen)
+                    iframe(width="100%" height="600" src="https://www.youtube.com/embed/#{youtube_parse}?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+                div
+                // iframe(width="100%" height="600" src="https://v.redd.it/9vk3khyb08e51/DASH_360.mp4?source=fallback" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+                iframe(width="100%" height="600" src=data.url frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
                 +skve k='doc_section' v='main' l='main' i='content'
                 +skve k='doc_section' v='watson' l='watson' i='dna'
                 +skve k='doc_section' v='preview' l='preview' i='content'
