--- a/client/reddit_page.jade
+++ b/client/reddit_page.jade
@@ -20,13 +20,18 @@ template(name='reddit_page')
                     iframe(width="100%" height="600" src="https://www.youtube.com/embed/#{youtube_parse}?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
                 div
                 // iframe(width="100%" height="600" src="https://v.redd.it/9vk3khyb08e51/DASH_360.mp4?source=fallback" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
-                iframe(width="100%" height="600" src=data.url frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
                 +skve k='doc_section' v='main' l='main' i='content'
                 +skve k='doc_section' v='watson' l='watson' i='dna'
+                if tone
+                    +skve k='doc_section' v='tone' l='tone' i='smile grey'
                 +skve k='doc_section' v='preview' l='preview' i='content'
                 .scrollin
                     if skv_is 'doc_section' 'watson'
                         +watson_view
+                    if skv_is 'doc_section' 'tone'
+                        +tone
+                        // +skve k='doc_section' v='money' l='money' i='money'
+                        // if skv_is 'doc_section'
                     if skv_is 'doc_section' 'preview'
                         iframe(width="100%" height="800" src=data.url frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)        
                     .spacer
@@ -66,10 +71,6 @@ template(name='reddit_page')
     
                     // .spacer
                     // div
-                    if tone
-                        +tone
-                        // +skve k='doc_section' v='money' l='money' i='money'
-                        // if skv_is 'doc_section'
                     |#{tags.length}
                     each tags
                         +flat_sub_tag_selector
