--- a/client/subreddit.jade
+++ b/client/subreddit.jade
@@ -59,9 +59,9 @@ template(name='subreddit')
                     |1
                 .ui.compact.circular.basic.small.tertiary.button.limit_10
                     |10
-                .ui.icon.compact.large.circular.basic.small.tertiary.button.sort_created(class=sort_created_class)
+                .ui.icon.compact.large.circular.basic.small.button.sort_created(class=sort_created_class)
                     i.clock.icon
-                .ui.icon.compact.large.circular.basic.small.tertiary.button.sort_ups(class=sort_ups_class)
+                .ui.icon.compact.large.circular.basic.small.button.sort_ups(class=sort_ups_class)
                     i.thumbs.up.icon
                 if skv_is 'view_detail' true
                     .ui.black.circular.compact.button.toggle_detail
