--- a/client/subreddit.jade
+++ b/client/subreddit.jade
@@ -215,8 +215,8 @@ template(name='subreddit_doc_item')
             else if watson.metadata.image
                 a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
                     img.ui.rounded.inline.image.toggle_view(src=watson.metadata.image)
-            .say.goto_post !{data.body}
-            span.say !{data.html}
+            a.say.goto_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class) !{data.body}
+            a.say(href="/r/#{subreddit}/post/#{_id}" class=post_header_class) !{data.html}
             .spacer
             if parsed_selftext_html
                 .ui.segment
@@ -231,7 +231,7 @@ template(name='subreddit_doc_item')
                     |{{nl2br data.body}}
             else if data.body_html
                 div
-                .ui.segment.say
+                a.pointer.say(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
                     |!{data.body_html}
             
             each tags
