--- a/client/reddit_page.jade
+++ b/client/reddit_page.jade
@@ -7,38 +7,39 @@ template(name='reddit_page')
                     |#{data.subreddit}
                 span.ui.pointer.text.f13.zoomer(class=post_header_class) !{data.title} #{data.link_title}
                 // .ui.basic.circular.button.get_post permalink #{permalink}
-                span.rounded.full
-                    |!{embed}
                 if data.is_image
                     img.ui.centered.rounded.image(src=data.url)
                 else if watson.metadata.image
                     img.ui.rounded.image(src=watson.metadata.image)
-                else if is_youtube
+                if is_youtube
                     div
                     // .ui.fluid.embed
                     //     iframe(id="ytplayer" type="text/html" width="100%" height="500" src="https://www.youtube.com/embed/#{youtube_parse}" frameborder="0" allowfullscreen)
                     iframe(width="100%" height="600" src="https://www.youtube.com/embed/#{youtube_parse}?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+                else if embed
+                    span.rounded.full
+                        |!{embed}
+                if data.link_url
+                    img.ui.image(src=data.link_url)
+                img.ui.image(src=data.url)
                 div
                 // iframe(width="100%" height="600" src="https://v.redd.it/9vk3khyb08e51/DASH_360.mp4?source=fallback" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
                 +skve k='view_section' v='main' l='main' i='content'
+                +skve k='view_section' v='comments' l='comments' i='comment'
                 +skve k='view_section' v='watson' l='watson' i='dna'
                 if tone
                     +skve k='view_section' v='tone' l='tone' i='smile grey'
                 +skve k='view_section' v='tags' l='tags' i='tags'
                 +skve k='view_section' v='related' l='related' i='fork'
                 +skve k='view_section' v='preview' l='preview' i='content'
-                +skve k='view_section' v='comments' l='comments' i='comment'
                 .scrollin
                     if skv_is 'view_section' 'main'
                         .spacer
                         // img(src=url)
-                        if data.link_url
-                            img.ui.image(src=data.link_url)
-                        img.ui.image(src=data.url)
                         // div(style='position:relative; padding-bottom:calc(125.00% + 44px)')
                         //     iframe(src='https://gfycat.com/ifr/MeanFatAmurratsnake' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen)
-                        .rounded
-                            |!{embed}
+                        // .rounded
+                        //     |!{embed}
                         span.say !{data.html}
                         
 
@@ -155,6 +156,19 @@ template(name='post_related')
     .ui.header related
     .ui.list
         each related_posts
-            .item.pointer.zoomer(class=post_header_class) 
-                |!{data.title} #{data.link_title}
+            a.item.say.pointer.zoomer(href="/r/#{subreddit}/post/#{_id}" class=post_header_class) 
+                if data.is_image
+                    a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
+                        img.ui.small.rounded.image.toggle_view(src=data.url)
+                else if watson.metadata.image
+                    a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
+                        img.ui.rounded.small.inline.image.toggle_view(src=watson.metadata.image)
+                else if data.thumbnail
+                    a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
+                        img.ui.rounded.small.inline.image(src=data.thumbnail)    
+            
+                .ui.inline.small.header !{data.title} #{data.link_title}
+                .ui.basic.label #{data.ups}
                 .ui.label #{subreddit}
+                each tags
+                    .ui.mini.basic.label #{this}
