--- a/client/subreddit.jade
+++ b/client/subreddit.jade
@@ -183,11 +183,11 @@ template(name='subreddit_doc_item')
                     .column
                         a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
                             img.ui.fluid.rounded.image.toggle_view(src=data.url)
-                else if watson.metadata.image
+                else if watson.metadata.image.length
                     .column
                         a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
                             img.ui.rounded.inline.image.toggle_view(src=watson.metadata.image)
-                else if data.thumbnail
+                else if data.thumbnail.length
                     .column
                         a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
                             img.ui.rounded.inline.image(src=data.thumbnail)    
