--- a/client/reddit_page.jade
+++ b/client/reddit_page.jade
@@ -8,9 +8,9 @@ template(name='reddit_page')
                 span.ui.pointer.text.f13.zoomer(class=post_header_class) !{data.title} #{data.link_title}
                 // .ui.basic.circular.button.get_post permalink #{permalink}
                 if data.is_image
-                    img.ui.centered.rounded.image(src=data.url)
+                    img.ui.centered.rounded.image.pointer.call_visual(src=data.url)
                 else if watson.metadata.image
-                    img.ui.rounded.image(src=watson.metadata.image)
+                    img.ui.rounded.image.pointer.call_visual(src=watson.metadata.image)
                 if is_youtube
                     div
                     // .ui.fluid.embed
@@ -20,8 +20,8 @@ template(name='reddit_page')
                     span.rounded.full
                         |!{embed}
                 if data.link_url
-                    img.ui.image(src=data.link_url)
-                img.ui.image(src=data.url)
+                    img.ui.image.pointer.call_visual(src=data.link_url)
+                img.ui.image.pointer.call_visual(src=data.url)
                 div
                 // iframe(width="100%" height="600" src="https://v.redd.it/9vk3khyb08e51/DASH_360.mp4?source=fallback" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
                 +skve k='view_section' v='main' l='main' i='content'
