--- a/client/subreddit.jade
+++ b/client/subreddit.jade
@@ -171,15 +171,12 @@ template(name='subreddit')
    
 template(name='subreddit_doc_item')                  
     .ui.item.seg
-        // if is_image
-        span.rounded.full
-            |!{embed}
-        // .spacer
-        // if skv_is 'view_detail' true
-        // i.tag.grey.icon
         unless skv_is 'view_detail' true
             .ui.stackable.equal.width.grid
-                if is_image
+                if embed
+                    span.rounded.full
+                        |!{embed}
+                else if is_image
                     .column
                         a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
                             img.ui.fluid.rounded.image.toggle_view(src=data.url)
@@ -203,7 +200,11 @@ template(name='subreddit_doc_item')
                     .ui.basic.label 
                         i.clock.icon
                         |{{ufrom data.created}}
-            
+                    each tags
+                        +flat_sub_tag_selector
+                    // if watson
+                    //     +doc_emotion_small
+
         if skv_is 'view_detail' true
             a.ui.header.view_post.zoomer(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
                 strong #{data.ups}:
